Fix alignment issues on iphone SE

--- a/assets/css/nibty.scss
+++ b/assets/css/nibty.scss
@@ -159,7 +159,11 @@ a:hover, a:active {
     }
   }
 
-  @media (max-width: 480px) {
+  @media (max-width: 320px) {
+    .ultm {
+      margin: 2px;
+    }
+
     .social-media-icons {
       text-align: center;
     }
@@ -238,7 +242,7 @@ a:hover, a:active {
     font-size: 18px;
 
     @media (max-width: 480px) {
-      font-size: 16px;
+      font-size: 13px;
     }
   }
 }
